修正API部分错别字

--- a/API/tf_tricks.tex
+++ b/API/tf_tricks.tex
@@ -1,4 +1,4 @@
 \chapter{Tensorflow技巧}
 \section{文件读取}
 \subsection{批量读取压缩图片为指定格式}
-%\lstinputlisting[language=Python]{../code/trick/batch_resize.py}
+\lstinputlisting[language=Python]{./code/trick/batch_resize.py}
